<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="335dp"
    android:layout_height="122dp"
    android:orientation="vertical"
    android:background="@color/input"
    android:layout_marginTop="12dp"
    android:layout_marginLeft="21dp">
    <TextView
        android:layout_marginTop="12dp"
        android:layout_marginLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textSize="16sp"
        android:fontFamily="@font/circe_regular"
        android:textColor="@color/new_task"
        >

    </TextView>
    <LinearLayout
        android:layout_marginTop="17dp"
        android:layout_marginLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_task"
            android:textSize="16sp"
            android:fontFamily="@font/circe_regular"
            android:textColor="@color/title"
            >

        </TextView>
        <TextView
            android:layout_marginTop="1dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_task"
            android:textSize="12sp"
            android:fontFamily="@font/circe_regular"
            android:textColor="@color/plain_text"
            >

        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="12dp"
        android:layout_marginLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check"
            >

        </ImageView>
        <TextView
            android:layout_marginLeft="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_status"
            android:textSize="12sp"
            android:fontFamily="@font/circe_regular"
            android:textColor="@color/title"
            >

        </TextView>
    </LinearLayout>
</LinearLayout>